src/components/gadget/edit/editor/css.styl
form
  --copy-font-size var(--small-copy-font-size)
  --copy-line-height var(--small-copy-line-height)

vellum-field

  &[type="text"]
    grid-column span 2
  
  &[type="url"]
    grid-column span 2

  &[name="image.url"]
    grid-column span 2

    [slot="input"]
      display flex
      flex-direction column
      gap 0.75rem

      .thumbnail
        padding 1rem
        width fit-content

        & > img
          max-inline-size 100%

  &[name="icon"]
    grid-column span 2

    [slot="input"]
      display flex
      flex-flow column
      gap 1rem

      .preview
        width fit-content
        padding 0.25rem

        &::empty
          border 1px solid var(--warn)

        & > i
          font-size 4rem
          line-height 4rem

  &[name="page"]
    grid-column span 2

    & > [slot="input"]
      display flex
      flex-direction column
      gap 0.75rem

      & > div
        padding 0.25rem
        display flex
        gap 0.25rem
        font-size var(--default-copy-font-size)
        line-height var(--default-copy-line-height)

  &[type="range"]
    grid-column span 2
    datalist
      // order 2
      // flex 1 1 auto
      // display flex
      // justify-content space-between

      option
        display none
        &:first-child, &:last-child
          display inline
          font-size var(--smallest-copy-font-size)

